fix keyboard colors in dark mode

--- a/src/assets/scss/Game.scss
+++ b/src/assets/scss/Game.scss
@@ -41,6 +41,7 @@
     .upper-kb {
       text-transform: uppercase;
       .hg-button {
+        color: #000 !important;
         &.hg-standardBtn {
           width: 40px;
           height: 40px;
